--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ embedded-io = "0.5.0"
 embedded-io-async = "0.5.0"
 embedded-storage = "0.3.0"
 
+cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
 cortex-m-rt = "0.7.3"
 
 embassy-executor = { version = "0.2.0", features = ["arch-cortex-m", "executor-thread", "nightly", "defmt", "integrated-timers", "executor-interrupt"] }
