--- a/cargo-generate.toml
+++ b/cargo-generate.toml
@@ -9,5 +9,5 @@ pre = ["pre-script.rhai"]
 type = "string"
 prompt = "Which MCU to target?"
 # TODO: Auto-generate the extended list (i.e. from stm32-data)
-choices = ["rp2040", "nrf52833", "nrf52840", "stm32h743zi", "esp32c3"]
+choices = ["rp2040", "nrf52833", "nrf52840", "nrf9160", "stm32h743zi", "esp32c3"]
 default = "rp2040"
