--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,14 +19,14 @@ embedded-storage = "0.3.1"
 cortex-m-rt = "0.7.3"
 
 {% if chip != "nrf9160" -%}
-embassy-executor = { version = "0.6", features = ["task-arena-size-1024", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "executor-interrupt"] }
+embassy-executor = { version = "0.7", features = ["task-arena-size-1024", "arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
 embassy-sync = { version = "0.6" }
-embassy-time = { version = "0.3", features = ["defmt", "defmt-timestamp-uptime"] }
+embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
 {% endif -%}
 
 {% if chip contains "nrf52" -%}
 cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
-embassy-nrf = { version = "0.2", features = ["defmt", "{{ chip }}", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
+embassy-nrf = { version = "0.3", features = ["defmt", "{{ chip }}", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
 {% endif -%}
 
 {% if chip contains "nrf91" -%}
@@ -46,5 +46,5 @@ embassy-stm32 = { version = "0.1", features = ["defmt", "{{ chip }}", "unstable-
 
 {% if chip contains "rp2040" -%}
 cortex-m = { version = "0.7.6" }
-embassy-rp = { version = "0.2", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
+embassy-rp = { version = "0.3", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
 {% endif -%}
