Disable test and benchmark for binary target
This is common practice for `#[no_std]` binaries because the test and
benchmark harnesses are not available.  Fixes some diagnostic warnings
emitted by tools like `rust-analyzer`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,11 @@ version = "0.1.0"
 authors = ["{{authors}}"]
 resolver = "2"
 
+[[bin]]
+name = "{{project-name}}"
+test = false
+bench = false
+
 [dependencies]
 defmt = "0.3"
 defmt-rtt = "0.4"
