--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,25 +23,31 @@ embedded-storage = "0.3.1"
 
 cortex-m-rt = "0.7.3"
 
-{% if chip != "nrf9160" -%}
-embassy-executor = { version = "0.7", features = ["task-arena-size-1024", "arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
-embassy-sync = { version = "0.6" }
-embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
-{% endif -%}
 
 {% if chip contains "nrf52" -%}
 cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
 embassy-nrf = { version = "0.3", features = ["defmt", "{{ chip }}", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
 {% endif -%}
 
+{% if chip contains "nrf9160" -%}
+embassy-nrf = { git="https://github.com/embassy-rs/embassy.git", features = ["defmt", "nrf9160-s", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
+{% endif -%}
+
+{% if chip contains "nrf9151" -%}
+embassy-nrf = { git="https://github.com/embassy-rs/embassy.git", features = ["defmt", "nrf9151-s", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
+{% endif -%}
+
 {% if chip contains "nrf91" -%}
 cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
 # Due to embassy-net-nrf91 not yet being published to crates.io we need to use git versions of repos
-embassy-nrf = { git="https://github.com/embassy-rs/embassy.git", features = ["defmt", "nrf9160-s", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
 embassy-executor = { git="https://github.com/embassy-rs/embassy.git", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
 embassy-time = { git="https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime"] }
 embassy-net-nrf91 = { git="https://github.com/embassy-rs/embassy.git", features = ["defmt"]}
 embassy-net = { git="https://github.com/embassy-rs/embassy.git", features = ["defmt", "tcp", "proto-ipv4", "medium-ip", "dns"] }
+{% else -%}
+embassy-executor = { version = "0.7", features = ["task-arena-size-1024", "arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
+embassy-sync = { version = "0.6" }
+embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
 {% endif -%}
 
 {% if chip contains "stm32" -%}
